1.結巴病狀分詞 2.FB management 測試

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,10 +1,11 @@
-#Updated at Sat May 06 11:17:01 CST 2017
-#Sat May 06 11:17:01 CST 2017
+#Updated at Sat May 13 22:59:57 CST 2017
+#Sat May 13 22:59:57 CST 2017
 application_name=Cbh
 label_com_cbh_entity_disease=Disease
 label_com_cbh_entity_disease_bigcategory=Big Category
 label_com_cbh_entity_disease_category=Category
 label_com_cbh_entity_disease_doccategory=Doc Category
+label_com_cbh_entity_disease_orderdis=Order Dis
 label_com_cbh_entity_disease_plural=Diseases
 label_com_cbh_entity_disease_symptom=Symptom
 label_com_cbh_entity_hospitalinfo=Hospital Info
